# project-unit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
applications/: CMakeLists.txt
applications/SectorConsol/: CMakeLists.txt  SectorConsol.cpp
applications/SectorConsole/: CMakeLists.txt
applications/SectorQt_UI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
cmake/: 3rdPartySupport.cmake  BuildLocation.cmake  BuildUtils.cmake  Common.cmake  DebugUtils.cmake  FetchGTest.cmake  GTestSupport.cmake  QtSupport.cmake  TestUtils.cmake  libraryGenerator.cmake
libraries/: CMakeLists.txt
libraries/Core/: CMakeLists.txt
libraries/Core/include/Sector/Core/: Core.h  Sector_export.h
libraries/Core/src/: Core.cpp  Core_impl.cpp  Core_impl.h
libraries/Core/test/src/: test_Core.cpp
template/: lib.h.in  lib_CMakeLists.txt.in  test_lib.cpp.in
